add heading element, add resize grid button and implement the sketch feature (using mouse event)

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Etch-A-Sketch</title>
+  <title>Etch-a-Sketch</title>
   <link rel="stylesheet" href="styles.css">
   <script src="scripts.js" defer></script>
 </head>
 <body>
+  <h1>Etch-a-Sketch</h1>
+
+  <button class="squares-num-btn">Resize the grid</button>
+
   <div class="container"></div>
   
 </body>
